tests disabled and correct data sent from statistics api
