# src/main/resources/openapi.yaml
@@ -206,22 +206,6 @@ paths:
                 $ref: '#/components/schemas/DaSSCoError'
       security:
       - dassco-idp: []
-  /v1/specimengraphinfo:
-    get:
-      operationId: getSpecimenData
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StatisticsData'
-        "400-599":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DaSSCoError'
-      security:
-      - dassco-idp: []
   /v1/institutes:
     get:
       operationId: getInstitutes_2
@@ -478,6 +462,54 @@ paths:
             schema:
               $ref: '#/components/schemas/Specimen'
       responses:
+        "400-599":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DaSSCoError'
+      security:
+      - dassco-idp: []
+  /v1/graphdata/month:
+    get:
+      operationId: getGraphDataMonth
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GraphData'
+        "400-599":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DaSSCoError'
+      security:
+      - dassco-idp: []
+  /v1/graphdata/week:
+    get:
+      operationId: getGraphDataWeek
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GraphData'
+        "400-599":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DaSSCoError'
+      security:
+      - dassco-idp: []
+  /v1/graphdata/year:
+    get:
+      operationId: getGraphDataYear
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: string
         "400-599":
           content:
             application/json:
@@ -844,20 +876,6 @@ components:
           type: string
           description: The name of the institution to which the collection belong
           example: NNAD
-    StatisticsData:
-      type: object
-      properties:
-        instituteName:
-          type: string
-        pipelineName:
-          type: string
-        workstationName:
-          type: string
-        createdDate:
-          type: string
-        specimens:
-          type: integer
-          format: int32
     Institute:
       type: object
       properties:
@@ -922,6 +940,24 @@ components:
           type: string
         preparation_type:
           type: string
+    GraphData:
+      type: object
+      properties:
+        institutes:
+          type: object
+          additionalProperties:
+            type: integer
+            format: int32
+        pipelines:
+          type: object
+          additionalProperties:
+            type: integer
+            format: int32
+        workstations:
+          type: object
+          additionalProperties:
+            type: integer
+            format: int32
     Workstation:
       type: object
       properties:
